# RAPP

./: .claudeignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  JULES_PR_MERGE_INSTRUCTIONS.md  Makefile  ONSITE_INGESTION_AGENT_PROMPT.md  ORIGINAL_REQUEST.md  PHASE_1_SPEC.md  RAPP_BLUEPRINT.md  README.md  TEST_INFRA.md  TEST_READY.md  corolla.HEIC  docker-compose.dev.yml  docker-compose.yml  highlander.HEIC  ingestionprogress.txt  package-lock.json  package.json  playwright.config.ts  playwright.real-backend.config.ts  product_evolution_spec.md  pyproject.toml  vins.txt
.agents/: ORIGINAL_REQUEST.md
.agents/auditor_final/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md
.agents/auditor_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_final/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/challenger_m2_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m2_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m3_api_1/: BRIEFING.md  ORIGINAL_REQUEST.md
.agents/challenger_m3_api_2/: BRIEFING.md  ORIGINAL_REQUEST.md  challenge.md  handoff.md  progress.md
.agents/explorer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m2_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m3_api_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m3_api_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_m3_api_3/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  plan.md  progress.md
.agents/reviewer_final/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/reviewer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/reviewer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m1_4/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m2_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m2_2/: BRIEFING.md  handoff.md  (+2 more)
.claude/: launch.json
VIN/: vins.txt
audit/: batch3.md  batch6.md
backend/: .dockerignore  Dockerfile  app.py  main.py  pricing.py  repair_templates.py  requirements.txt  schemas.py  vin_fallback.py
docs/: APP_IMPROVEMENT_OPPORTUNITIES.md  ARCHITECTURE_BLUEPRINT.md  DEFERRED_HUMAN_TASKS.md  MODEL_ASSIGNMENT_GUIDE.md  UPDATED_PRODUCT_NORTH_STAR.md  embedding_strategy.md  ingestion_incident_log.md  ingestion_speed_log.md  ingestion_status.md  ingestion_vehicle_skip_fix_plan.md  jules_ingestion_runbook.md  knowledge_base_metadata_schema.md  onsite_ingestion_runbook.md  phase0_implementation_guide.md
etl/: __init__.py  __main__.py  config.py  export_kb.py  import_kb.py  models.py  pipeline.py  progress_view.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: backup_rapp_db.command  backup_rapp_db.sh  check_kb.py  com.rapp.recall-watch.plist  ingest_seed_vehicles.py  ingestion_safety_snapshot.sh  ingestion_watchdog.sh  pause_ingestion_and_eject.sh  reindex_with_gemini.py  seed_vehicles.json
tests/: e2e-mvp-flow.spec.ts  e2e-real-backend-smoke.spec.ts  mock_app.py  verify_tests.sh
(+328 files in other folders)
