[tool.poetry]
name = "rapp-backend"
version = "0.1.0"
description = "Automotive AI Repair Engine — Backend"
authors = []
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
openai = "^1.35.0"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
chromadb = "^0.5.3"
stripe = "^9.12.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.1"
structlog = "^24.1.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
black = "^24.4.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
types-stripe = "*"

[tool.poetry.scripts]
dev = "uvicorn backend.main:app --reload --port 8000"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "frontend/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
