[project]
name = "rapp-backend"
version = "0.1.0"
description = "Automotive AI Repair Engine — Backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "httpx>=0.28.0,<0.29.0",
    "google-genai>=2.10.0,<3.0.0",
    "chromadb>=0.5.3,<0.6.0",
    "stripe>=9.12.0,<10.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings>=2.3.1,<3.0.0",
    "structlog>=24.1.0,<25.0.0",
    "gunicorn>=22.0.0,<23.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pillow>=10.0.0,<11.0.0",
    "pillow-heif>=0.15.0,<0.16.0",
    "tenacity>=8.5.0,<10.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
]

[tool.uv]
package = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "ruff>=0.4.0,<0.5.0",
    "black>=24.4.0,<25.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.7,<0.24.0",
    "types-stripe",
]
etl = [
    "pdfplumber>=0.11.0,<0.12.0",
    "python-dotenv>=1.2.2",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "frontend/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
